FIxed breaks in contact page

--- a/resources/stylus/contact.styl
+++ b/resources/stylus/contact.styl
@@ -12,6 +12,10 @@ ltgray = #8f8f8f
   height 475px
   padding-top 10px
 
+  .main-image-right, .main-image-left
+    width 225px
+    height 221px
+
   h3
     text-align center
     font-size 21px
